test-package-compiler/tests/snapshots/compiler_tests__stdlib_integer_lexer.snap
---
source: test-package-compiler/tests/compiler_tests.rs
expression: output
---
Token { kind: Identifier("sum"), span: Span { start: 133, end: 136 }, leading_trivia: [LineComment("// Copyright 2026 James Casey"), Whitespace("\n"), LineComment("// SPDX-License-Identifier: Apache-2.0"), Whitespace("\n\n"), LineComment("// Test integer arithmetic and operations"), Whitespace("\n\n"), LineComment("// Basic arithmetic"), Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 137, end: 139 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("5"), span: Span { start: 140, end: 141 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: BinarySelector("+"), span: Span { start: 142, end: 143 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("3"), span: Span { start: 144, end: 145 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("difference"), span: Span { start: 146, end: 156 }, leading_trivia: [Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 157, end: 159 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("10"), span: Span { start: 160, end: 162 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: BinarySelector("-"), span: Span { start: 163, end: 164 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("4"), span: Span { start: 165, end: 166 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("product"), span: Span { start: 167, end: 174 }, leading_trivia: [Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 175, end: 177 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("6"), span: Span { start: 178, end: 179 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: BinarySelector("*"), span: Span { start: 180, end: 181 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("7"), span: Span { start: 182, end: 183 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("quotient"), span: Span { start: 184, end: 192 }, leading_trivia: [Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 193, end: 195 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("20"), span: Span { start: 196, end: 198 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: BinarySelector("/"), span: Span { start: 199, end: 200 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("4"), span: Span { start: 201, end: 202 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("intDiv"), span: Span { start: 254, end: 260 }, leading_trivia: [Whitespace("\n\n"), LineComment("// Integer division and modulo (keyword messages)"), Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 261, end: 263 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("17"), span: Span { start: 264, end: 266 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Keyword("div:"), span: Span { start: 267, end: 271 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("5"), span: Span { start: 272, end: 273 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("remainder"), span: Span { start: 274, end: 283 }, leading_trivia: [Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 284, end: 286 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("17"), span: Span { start: 287, end: 289 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: BinarySelector("%"), span: Span { start: 290, end: 291 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("5"), span: Span { start: 292, end: 293 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("modResult"), span: Span { start: 294, end: 303 }, leading_trivia: [Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 304, end: 306 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("17"), span: Span { start: 307, end: 309 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Keyword("mod:"), span: Span { start: 310, end: 314 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("5"), span: Span { start: 315, end: 316 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("isLess"), span: Span { start: 332, end: 338 }, leading_trivia: [Whitespace("\n\n"), LineComment("// Comparison"), Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 339, end: 341 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("3"), span: Span { start: 342, end: 343 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: BinarySelector("<"), span: Span { start: 344, end: 345 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("5"), span: Span { start: 346, end: 347 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("isGreater"), span: Span { start: 348, end: 357 }, leading_trivia: [Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 358, end: 360 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("10"), span: Span { start: 361, end: 363 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: BinarySelector(">"), span: Span { start: 364, end: 365 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("5"), span: Span { start: 366, end: 367 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("isEqual"), span: Span { start: 368, end: 375 }, leading_trivia: [Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 376, end: 378 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("7"), span: Span { start: 379, end: 380 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: BinarySelector("="), span: Span { start: 381, end: 382 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("7"), span: Span { start: 383, end: 384 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("isNotEqual"), span: Span { start: 385, end: 395 }, leading_trivia: [Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 396, end: 398 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("3"), span: Span { start: 399, end: 400 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: BinarySelector("~="), span: Span { start: 401, end: 403 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("5"), span: Span { start: 404, end: 405 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("counter"), span: Span { start: 435, end: 442 }, leading_trivia: [Whitespace("\n\n"), LineComment("// Iteration - times repeat"), Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 443, end: 445 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("0"), span: Span { start: 446, end: 447 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Integer("5"), span: Span { start: 448, end: 449 }, leading_trivia: [Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Keyword("timesRepeat:"), span: Span { start: 450, end: 462 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: LeftBracket, span: Span { start: 463, end: 464 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("counter"), span: Span { start: 464, end: 471 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 472, end: 474 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("counter"), span: Span { start: 475, end: 482 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: BinarySelector("+"), span: Span { start: 483, end: 484 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("1"), span: Span { start: 485, end: 486 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: RightBracket, span: Span { start: 486, end: 487 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("sum"), span: Span { start: 508, end: 511 }, leading_trivia: [Whitespace("\n\n"), LineComment("// Range iteration"), Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 512, end: 514 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("0"), span: Span { start: 515, end: 516 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Integer("1"), span: Span { start: 517, end: 518 }, leading_trivia: [Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Keyword("to:"), span: Span { start: 519, end: 522 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("10"), span: Span { start: 523, end: 525 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Keyword("do:"), span: Span { start: 526, end: 529 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: LeftBracket, span: Span { start: 530, end: 531 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Colon, span: Span { start: 531, end: 532 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("n"), span: Span { start: 532, end: 533 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Pipe, span: Span { start: 534, end: 535 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("sum"), span: Span { start: 536, end: 539 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 540, end: 542 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("sum"), span: Span { start: 543, end: 546 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: BinarySelector("+"), span: Span { start: 547, end: 548 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("n"), span: Span { start: 549, end: 550 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: RightBracket, span: Span { start: 550, end: 551 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("isEven"), span: Span { start: 569, end: 575 }, leading_trivia: [Whitespace("\n\n"), LineComment("// Number tests"), Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 576, end: 578 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("4"), span: Span { start: 579, end: 580 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("isEven"), span: Span { start: 581, end: 587 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("isOdd"), span: Span { start: 588, end: 593 }, leading_trivia: [Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 594, end: 596 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("7"), span: Span { start: 597, end: 598 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("isOdd"), span: Span { start: 599, end: 604 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Identifier("isZero"), span: Span { start: 605, end: 611 }, leading_trivia: [Whitespace("\n")], trailing_trivia: [Whitespace(" ")] }
Token { kind: Assign, span: Span { start: 612, end: 614 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Integer("0"), span: Span { start: 615, end: 616 }, leading_trivia: [], trailing_trivia: [Whitespace(" ")] }
Token { kind: Identifier("isZero"), span: Span { start: 617, end: 623 }, leading_trivia: [], trailing_trivia: [] }
Token { kind: Eof, span: Span { start: 624, end: 624 }, leading_trivia: [Whitespace("\n")], trailing_trivia: [] }
